test/testdata/variables/self_referential_definition_error_local.lox
var a = "global a";
{
  var a = a; // error: variable definition cannot refer to itself
}
